--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -12,11 +12,12 @@
   height: 25px;
   border-radius: 10px;
   padding: 5px 40px 5px 10px;
+  margin-right: 60px;
 }
 
 .searchButton {
   position: absolute;
-  right: 5px;
+  right: 70px;
   top: 2px;
   cursor: pointer;
   height: 100%;
